# jefftriplett.github.io

./: .bumpversion.cfg  .editorconfig  .envrc.example  .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CNAME  Gemfile  Makefile  Procfile  README.md  Rakefile  _config.yml  about.md  categories.html  colophon.md  demo-workalendar.py  docker-compose.override.yml-example  docker-compose.yml  export.xml  feed.xml  games.txt  index.html  justfile  main.py  modd-watch.conf  modd.conf  package-lock.json  package.json  params.json  postcss.config.js  projects.md  pyproject.toml  requirements.in  requirements.txt  search.json  shots.yml  snex.conf  snex.conf.yaml  (+3 more)
.docker/: devd.Dockerfile
.forestry/: settings.yml
.well-known/: webfinger
_agents/: django-bylaws-agent.md  django-dep-10-12.md  django-news-agent.md  django-release-notes.md  django-trademark-agent.md  django-working-groups-agent.md  dsf-minutes-agent.md  office-hours-agent.md  url-to-voice-agent.md
_appearances/: 0000-espaciosabiertos-dev-alternative-projects-from-idea-to-product.md  0000-productivity-in-tech-jeff-triplett-tells-us-a-story-of-django-and-community.md  2016-01-04-pydev-of-the-week-jeff-triplett.md  2018-06-12-espacios-abiertos-alternative-projects-from-idea-to-product.md  2019-02-01-opensource-com-2019-peoples-choice-award.md  2019-07-31-django-chat-podcast-interview-django-testing-jeff-triplett.md  2020-06-17-djangochat-modern-django-development-jeff-triplett.md  2020-12-03-django-chat-docker-tailwind-and-more-jeff-triplett.md  2021-05-21-test-and-code-154-don-t-mock-your-database-jeff-triplett.md  2022-05-25-django-chat-django-4-1-preview-jeff-triplett.md  2023-06-12-what-the-python-software-foundation-does-and-doesn-t-do.md  2024-05-15-django-chat-funding-open-source-jeff-triplett.md  2025-08-29-talk-python-celebrating-djangos-20th-birthday-with-its-creators.md  (+6 more)
_assets/: main.scss
_data/: alerts.yml  (+11 more)
(+1191 files in other folders)
