[tool.poetry]
name = "jefftriplett.github.io"
version = "2021.7.1"
description = ""
authors = ["Jeff Triplett <jeff.triplett@gmail.com>"]


[tool.bumpver]
current_version = "2021.7.1"
version_pattern = "YYYY.MM.INC1"
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
commit = true
tag = true
# push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"_config.yml" = [
    "version: {version}",
]
"package.json" = [
    '"version": "{version}"',
]
