[tool.poetry]
name = "jefftriplett.github.io"
version = "2022.5.2"
description = ""
authors = ["Jeff Triplett <jeff.triplett@gmail.com>"]

[tool.bumpver]
current_version = "2022.5.2"
version_pattern = "YYYY.MM.INC1"
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
commit = true
push = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"_config.yml" = [
    "version: {version}",
]
"package.json" = [
    '"version": "{version}"',
]

[tool.isort]
profile = "black"
honor_noqa = true
