[project]
name = "jefftriplett.github.io"
version = "2024.9.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = ["Jeff Triplett <jeff.triplett@gmail.com>"]
dependencies = []

[tool.bumpver]
current_version = "2024.9.1"
version_pattern = "YYYY.MM.INC1"
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
commit = true
push = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"_config.yml" = ["version: {version}"]
"package.json" = ['"version": "{version}"']

[tool.isort]
profile = "black"
honor_noqa = true
